alert(flash) meg feature added updated util 55. Project - Phase 2 (Part c)

--- a/backends/majorproject/views/layouts/biolerplate.ejs
+++ b/backends/majorproject/views/layouts/biolerplate.ejs
@@ -32,7 +32,8 @@
     <%- include('../includes/navbar') %>
 
     <!-- Page Content -->
-    <main><%- body %></main>
+    <main>
+      <%- body %></main>
 
     <!-- Footer -->
     <%- include('../includes/footer') %>
