--- a/backends/majorproject/views/listings/new.ejs
+++ b/backends/majorproject/views/listings/new.ejs
@@ -2,6 +2,8 @@
 
 <!-- Add Listing Form -->
 <div class="container EditContainer">
+  
+  <%- include('../includes/flash') %>
   <div class="listing-form">
     <h4>Add Your Home</h4>
     <form class="needs-validation" action="/listings" method="POST" novalidate>
