--- a/backends/majorproject/views/listings/view.ejs
+++ b/backends/majorproject/views/listings/view.ejs
@@ -1,6 +1,8 @@
 <% layout( "/layouts/biolerplate") %>
 
 <div class="container viewContainer">
+  
+  <%- include('../includes/flash') %>
   <div>
     <h2><%= details.title %></h2>
     <img
