--- a/backends/majorproject/public/css/style.css
+++ b/backends/majorproject/public/css/style.css
@@ -47,11 +47,10 @@ footer a:hover {
 .container {
   /* padding: 1rem; */
   margin-top: 70px;
-} 
-h3{
+}
+h3 {
   padding: 1rem;
 }
-
 
 .indexContainer {
   margin-top: 70px;
@@ -63,10 +62,9 @@ h3{
   justify-content: center; */
 }
 
-.listing-link{
+.listing-link {
   text-decoration: none;
 }
-
 
 .viewContainer {
   max-width: 550px;
@@ -130,7 +128,6 @@ h3{
   text-align: start;
 }
 
-
 .card-title {
   font-weight: 600;
   font-size: 1.25rem;
@@ -143,21 +140,21 @@ h3{
   color: #6c757d;
 }
 
-.card-text p{
+.card-text p {
   font-weight: 400;
 }
 
-.card{
+.card {
   border: none !important;
   margin-bottom: 2rem;
   background-color: #f8f9fa;
 }
 
-.card-img-overlay{
+.card-img-overlay {
   opacity: 0;
   background-color: #ffffff;
 }
-.card-img-overlay:hover{
+.card-img-overlay:hover {
   opacity: 0.2;
 }
 /* ========== Forms ========== */
@@ -174,7 +171,7 @@ h3{
 .formDiv {
   margin: auto;
 }
-.viewFormDiv{
+.viewFormDiv {
   display: flex;
   gap: 10px;
 }
@@ -218,7 +215,6 @@ p {
   margin-right: 5px;
 }
 
-
 /* html, body {
   height: 100%;
 }
@@ -235,24 +231,23 @@ main {
 /* ✅ Not required unless overriding */
 /* * {
   box-sizing: border-box;
-} */ 
+} */
 
 /* Make the body fill the viewport and arrange its children in a column */
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   display: flex;
   flex-direction: column;
 }
 
-
-
 /* Let main content grow and push footer down */
 main {
   flex: 1;
 }
 
-.errorDiv{
+.errorDiv {
   margin-top: 10%;
   /* display: flex; */
 }
@@ -262,3 +257,10 @@ main {
   align-items: center; */
 /* } */
 
+.flash-message {
+  background-color: #d4edda;
+  color: #155724;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
